Convert to Umbraco 10

--- a/ContentGenerator.Website/Views/Partials/blocklist/Components/richTextRow.cshtml
+++ b/ContentGenerator.Website/Views/Partials/blocklist/Components/richTextRow.cshtml
@@ -13,6 +13,8 @@
     }
 }
 
-<div class="richtext @(spacingClasses)">
-    @row.Content
+<div class="row clearfix @(spacingClasses)">
+    <div class="col-md-12 column">
+        @row.Content
+    </div>
 </div>
