--- a/ContentGenerator.Website/Views/Partials/blocklist/Components/imageRow.cshtml
+++ b/ContentGenerator.Website/Views/Partials/blocklist/Components/imageRow.cshtml
@@ -14,11 +14,13 @@
     }
 }
 
-<div class="image @(spacingClasses)">
-    <img src="@row.Image.Url()" alt="@row.Image.Content.GetAltText()" class="img-fluid">
-    @if (!string.IsNullOrWhiteSpace(row.Caption))
-    {
-        <p class="caption">@row.Caption</p>
-    }
+<div class="row clearfix @(spacingClasses)">
+    <div class="col-md-12 column">
+        <img src="@row.Image.Url()" alt="@row.Image.Content.GetAltText()" class="img-fluid">
+        @if (!string.IsNullOrWhiteSpace(row.Caption))
+        {
+            <p class="caption">@row.Caption</p>
+        }
+    </div>
 </div>
 
