--- a/ContentGenerator.Website/Views/Partials/blocklist/Components/latestArticlesRow.cshtml
+++ b/ContentGenerator.Website/Views/Partials/blocklist/Components/latestArticlesRow.cshtml
@@ -26,7 +26,7 @@
     <div class="col-md-12 column">
         @foreach (var article in pageOfArticles)
         {
-            var author = article.Author;
+            var author = article.GetAuthor(Umbraco);
             bool.TryParse(article.Value<string>("showFullArticleOnListPage", fallback: Fallback.ToAncestors), out var showFullArticleOnListPage);
 
             <div class="post-preview">
